--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -18,5 +18,7 @@
         <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
     </a>
            
+    <p><a href="tweets.html">Check out soem tweets I like</a></p>
+
 </body>
 </html>
