--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,12 +6,14 @@
     <title>Basic Structure</title>
 </head>
 <body>
+    
     <header>
         <ul>
             <li><a href="index.html">Home</a></li>
              <li><a href="tweets.html">Tweets</a></li>   
         </ul>
     </header>
+
     <main>
         <article>
             <h1>ALX Advantage</h1>
@@ -33,12 +35,11 @@
     <aside>
         <p>Placeholder to add comment thread later.</p>
     </aside>
+</main>
 
-    </main>
-    
-    <footer>
-        Made by Edith Wanja<a href="https://github.com/EWanja/My_First_Portfolio" target="_blank">Github Profile</a>
-    </footer>
+<footer>
+    <p>Made by Edith Wanja<a href="https://github.com/EWanja/My_First_Portfolio" target="_blank">Github Profile</a></p>
+</footer>
 
 </body>
 </html>
