--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,45 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tweets</title>
-</head>
-<body>
-    
+  </head>
+  <body>
     <header>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-             <li><a href="tweets.html">Tweets</a></li>   
-        </ul>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tweets.html">Tweets</a></li>
+      </ul>
     </header>
 
     <main>
-        <article>
-                <h1>Tweet Page</h1>
-                <h2>Some tweets I like</h2>
+      <article>
+        <h1>Tweet Page</h1>
+        <h2>Some tweets I like</h2>
 
-                <!-- Embedded Tweet -->
-                  <blockquote class="twitter-tweet">
-                     <p lang="en" dir="ltr">6 months of focus and hard work can put you 5 years ahead in life.<br><br>Don’t underestimate the power of consistency, desire and passion.
-                         <a href="https://twitter.com/hashtag/CodeNewbie?src=hash&amp;ref_src=twsrc%5Etfw">#CodeNewbie</a>
-                         <a href="https://twitter.com/hashtag/100DaysOfCode?src=hash&amp;ref_src=twsrc%5Etfw">#100DaysOfCode</a>
-                         <a href="https://t.co/T1UzTde6Ih">pic.twitter.com/T1UzTde6Ih</a></p>&mdash; GrayHat (@HarunMbaabu)
-                         <a href="https://twitter.com/HarunMbaabu/status/1525028124060155904?ref_src=twsrc%5Etfw">May 13, 2022</a>
+        <!-- Embedded Tweet -->
+        <blockquote class="twitter-tweet">
+          <p lang="en" dir="ltr">
+            6 months of focus and hard work can put you 5 years ahead in
+            life.<br /><br />Don’t underestimate the power of consistency,
+            desire and passion.
+            <a
+              href="https://twitter.com/hashtag/CodeNewbie?src=hash&amp;ref_src=twsrc%5Etfw"
+              >#CodeNewbie</a
+            >
+            <a
+              href="https://twitter.com/hashtag/100DaysOfCode?src=hash&amp;ref_src=twsrc%5Etfw"
+              >#100DaysOfCode</a
+            >
+            <a href="https://t.co/T1UzTde6Ih">pic.twitter.com/T1UzTde6Ih</a>
+          </p>
+          &mdash; GrayHat (@HarunMbaabu)
+          <a
+            href="https://twitter.com/HarunMbaabu/status/1525028124060155904?ref_src=twsrc%5Etfw"
+            >May 13, 2022</a
+          >
         </blockquote>
-        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <script
+          async
+          src="https://platform.twitter.com/widgets.js"
+          charset="utf-8"
+        ></script>
 
-         <p><a href ="index.html">Back to Homepage</a></p>
-        </article>
+        <p><a href="index.html">Back to Homepage</a></p>
+      </article>
 
-       <aside>
+      <aside>
         <p>Placeholder to add comment thread later.</p>
-    </aside>
-</main>
+      </aside>
+    </main>
 
-<footer>
-    <p>Made by Edith Wanja<a href="https://github.com/EWanja/My_First_Portfolio" target="_blank">Github Profile</a></p>
-</footer>
-
-</body>
+    <footer>
+      <p>
+        Made by Edith Wanja<a
+          href="https://github.com/EWanja/My_First_Portfolio"
+          target="_blank"
+          >Github Profile</a
+        >
+      </p>
+    </footer>
+  </body>
 </html>
