Update index.html and tweets.html  nesting for correct structure

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -50,15 +50,16 @@
       </article>
 
       <aside>
-        <p>Placeholder to add comment thread later.</p>
+        <p>placeholder to add comment thread later.</p>
       </aside>
+      
     </main>
 
     <footer>
       <p>
-        Made by Edith Wanja<a
+        Made by Edith Wanja - <a
           href="https://github.com/EWanja/My_First_Portfolio"
-          target="_blank"
+          target='_blank'
           >Github Profile</a
         >
       </p>
