--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -16,50 +16,27 @@
     <main>
       <article>
         <h1>ALX Advantage</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.Dolores ipsam
-          praesentium atque molestiae, eos odit nobis voluptatibus voluptates id
-          eveniet voluptatum dolor.
-        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ipsam praesentium atque molestiae, eos odit nobis voluptatibus voluptates id eveniet voluptatum dolor.</p>
 
         <h2>Your Path with ALX</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.Dolores ipsam
-          praesentium atque molestiae, eos odit nobis voluptatibus voluptates id
-          eveniet voluptatum dolor.
-        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ipsam praesentium atque molestiae, eos odit nobis voluptatibus voluptates id eveniet voluptatum dolor.</p>
 
         <h3>More Impact</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.Dolores ipsam
-          praesentium atque molestiae, eos odit nobis voluptatibus voluptates id
-          eveniet voluptatum dolor.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.Dolores ipsam
-          praesentium atque molestiae, eos odit nobis voluptatibus voluptates id
-          eveniet voluptatum dolor.
-        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ipsam praesentium atque molestiae, eos odit nobis voluptatibus voluptates id eveniet voluptatum dolor.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ipsam praesentium atque molestiae, eos odit nobis voluptatibus voluptates id eveniet voluptatum dolor.</p>
 
         <a href="https://www.alxafrica.com/">
           <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" />
         </a>
-        <p><a href="tweets.html">Check out soem tweets I like</a></p>
+        <p><a href="tweets.html">Check out some tweets I like</a></p>
       </article>
 
       <aside>
-        <p>placeholder to add comment thread later.</p>
+        <p>placeholder to add comment thread later</p>
       </aside>
     </main>
 
-    <footer>
-      <p>
-        Made by Edith Wanja - <a
-          href="https://github.com/EWanja/My_First_Portfolio"
-          target='_blank'
-          >Github Profile</a
-        >
-      </p>
-    </footer>
+    <footer><p>Made by Edith Wanja - <a href="https://github.com/EWanja/My_First_Portfolio" target='_blank'>here</a>.</p></footer>
   </body>
 </html>
+
