--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Edith Wanja - Personal Portfolio</title>
   </head>
@@ -28,13 +28,13 @@
     <section id="projects">
         <h2>Projects</h2>
 
-      <article>
+      <article class="project">
         <h3>A serviced Office Website</h3>
         <p>A website developed for a serviced office offering coworking spaces, meeting rooms and private offices using HTML,CSS,PHP and JavScript</p>
         <a href="https://quasiservicedoffices.co.ke/" target="_blank">View Project</a>
       </article>
 
-      <article>
+      <article class="project">
         <h3>Portfolio Website</h3>
         <p>A personal website to showcase my skills using HTML,CSS AND JavaScript</p>
         <a href="https://ewanja.github.io/Portfolio/" target="_blank">View Project</a>
@@ -43,12 +43,8 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>I am currently learning front-end development through the ALX program. I enjoy solving problems and collaborating with peers</p>
-        <p>My Hobbies:</p>
-        <ul>
-            <li>Photography</li>
-            <li>Baking</li>
-        </ul>
+        <p>I am currently learning front-end development through the ALX program. I enjoy solving problems and creating cool stuff for the web</p>
+        <p>Skills: HTML, CSS, Git, GitHub, JavaScript (beginner), Problem-Solving, Creative Thinking</p>
     </section>
 
     <section id="contact">
